--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrderActivity">
+        <activity android:name=".ReadyPayActivity">
 
         </activity>
+        <activity android:name=".OrderActivity"></activity>
         <activity android:name=".CommentActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ShoppingCartActivity">
