--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.dysy.carttest"
-        minSdkVersion 21
+        minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -17,6 +17,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res/layouts/login',
+                    'src/main/res/layouts/personal',
+                    'src/main/res/layouts/address',
+                    'src/main/res/layouts/order',
+                    'src/main/res/layouts/home',
+                    'src/main/res'
+            ]
+        }
+    }
+
 }
 
 dependencies {
@@ -31,4 +51,37 @@ dependencies {
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //qinjie
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.wear:wear:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.github.yechaoa:YUtils:2.0.6'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.github.xiaohaibin:XBanner:1.7.3'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.github.Hitomis:transferee:1.5.0'
+    implementation 'com.alibaba:fastjson:1.2.68'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    implementation 'org.apache.httpcomponents:httpclient:4.3.5'
+    implementation 'com.github.florent37:materialtextfield:1.0.7'
+    implementation 'com.github.gb-nick:PagerSlidingTabStrip:v1.0.5'
+    implementation 'com.sun.mail:android-mail:1.5.5'
+    implementation 'com.sun.mail:android-activation:1.5.5'
+    implementation group: 'com.google.guava', name: 'guava', version: '29.0-android'
+    implementation 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
+    implementation "com.squareup.okhttp3:okhttp:3.10.0"
+
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'cn.carbs.android:AvatarImageView:1.0.1'
+    implementation 'com.github.wildma:PictureSelector:1.1.1'
 }
