--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
                     'src/main/res/layouts/address',
                     'src/main/res/layouts/order',
                     'src/main/res/layouts/home',
+                    'src/main/res/layouts/main',
                     'src/main/res'
             ]
         }
@@ -40,7 +41,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -51,7 +52,6 @@ dependencies {
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
-
     //qinjie
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -75,13 +75,13 @@ dependencies {
     implementation 'com.github.gb-nick:PagerSlidingTabStrip:v1.0.5'
     implementation 'com.sun.mail:android-mail:1.5.5'
     implementation 'com.sun.mail:android-activation:1.5.5'
-    implementation group: 'com.google.guava', name: 'guava', version: '29.0-android'
+    implementation 'com.google.guava:guava:29.0-android'
     implementation 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
-    implementation "com.squareup.okhttp3:okhttp:3.10.0"
-
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'cn.carbs.android:AvatarImageView:1.0.1'
     implementation 'com.github.wildma:PictureSelector:1.1.1'
+    implementation files('src/libs/open_sdk_r8353806_lite.jar')
 }
