--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.flipboard:bottomsheet-core:1.5.1'
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+//    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     //qinjie
     implementation 'androidx.appcompat:appcompat:1.0.2'
