--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
@@ -21,20 +20,17 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReadyPayActivity">
+        <activity android:name=".UserPayResultActivity">
 
         </activity>
-        <activity android:name=".OrderActivity">
-        </activity>
+        <activity android:name=".ReadyPayActivity"></activity>
+        <activity android:name=".OrderActivity"></activity>
         <activity android:name=".CommentActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
-
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".ShoppingCartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,38 +39,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.dysy.carttest.pay.PayDemoActivity"
+            android:name=".pay.PayDemoActivity"
             android:icon="@drawable/msp_icon"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".pay.H5PayDemoActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind"></activity> <!-- qinjie -->
+        <activity android:name="com.qinjie.demo.personal.address.PersonalCenterAddressEditActivity" />
+        <activity android:name="com.qinjie.demo.personal.address.PersonalCenterAddressMainActivity" />
+        <activity android:name="com.qinjie.demo.personal.order.PersonalCenterOrderMainActivity" />
+        <activity android:name="com.qinjie.demo.login.LoginMainActivity">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.dysy.carttest.pay.H5PayDemoActivity"
-            android:configChanges="orientation|keyboardHidden|navigation"
-            android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
-
-
-
-
-
-
-
-
-
-
-<!--        qinjie-->
-        <activity android:name="com.qinjie.demo.personal.address.PersonalCenterAddressEditActivity" />
-        <activity android:name="com.qinjie.demo.personal.address.PersonalCenterAddressMainActivity" />
-        <activity android:name="com.qinjie.demo.personal.order.PersonalCenterOrderMainActivity" />
-        <activity android:name="com.qinjie.demo.login.LoginMainActivity" >
-
-
         </activity>
         <activity
             android:name="com.tencent.tauth.AuthActivity"
@@ -103,7 +92,6 @@
         <uses-library
             android:name="com.google.android.things"
             android:required="false" />
-
     </application>
 
 </manifest>
